<resources>


    <string name="user">Usuario</string>
    <string name="nombre_de_usuario">nombre de usuario</string>
    <string name="password">contraseña</string>
    <string name="password2">Contraseña</string>
    <string name="login">INGRESAR</string>
    <string name="optionregister">Registrarse</string>
    <string name="optionForget">¿Olvidó contraseña?</string>
    <string name="logo">logo</string>
    <string name="pacient">Paciente</string>
    <string name="especialista">Especialista</string>

    <!--Strings menu principal y citas-->
    <string name="app_name">Auriculoterapia</string>
    <string name="registrar_cita">Reserva</string>
    <string name="appointment_state">Estado</string>
    <string name="appointment_availability">Mi disponibilidad</string>
    <string name="patient_text">Paciente</string>
    <string name="date_text">Fecha</string>
    <string name="time_text">Hora</string>
    <string name="date_hint">Seleccione una fecha</string>
    <string name="time_hint">Seleccione la hora</string>
    <string name="attention_text">Tipo de\natención</string>
    <string name="register_appointment_button">Reservar</string>
    <string name="registroTitulo">Registro</string>
    <string name="str_nombre">Nombre:</string>
    <string name="str_apellidoLabel">Apellido:</string>
    <string name="str_fecha_de_nacimiento">Fecha de Nacimiento:</string>
    <string name="str_usuarioLabel">Usuario:</string>
    <string name="str_passwordLabel">Contraseña</string>
    <string name="str_keywordLabel">Palabra clave:</string>
    <string name="str_GenderLabel">Sexo:</string>
    <string name="str_apellidohint">apellido</string>
    <string name="str_keywordhint">palabra clave</string>
    <!---->

    <!--Solo menu-->
    <string name="citas_menu">Citas</string>
    <string name="pacientes_menu">Pacientes</string>
    <string name="resultados_menu">Resultados</string>
    <string name="notificaciones_menu">Notificaciones</string>
    <string name="configuracion_menu">Configuración</string>
    <string name="tratamiento_menu">Tratamiento</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="num_celular_text">Celular</string>
    <string name="registrar_button_main">Registrar</string>

    <string name="buscar_paciente">Buscar paciente</string>
    <string name="answer_button">Responder</string>
    <string name="history_button">Historial</string>
    <string name="seleccionar_tratamiento">Seleccionar\ntratamiento</string>
    <string name="fecha_de_tratamiento_text">Fecha de\ntratamiento</string>
    <string name="frecuencia_diaria">Frecuencia\ndiaria</string>
    <string name="send_text">Enviar</string>
    <string name="cancel_text">Cancelar</string>

    <string name="str_cambiar_contrase_a">Actualizar Contraseña</string>
    <string name="str_cambiar">Actualizar</string>
    <string name="str_nueva_contrase_a">Nueva Contraseña:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="disponibilidad_seleccionar_dia">Seleccione\nel día:</string>
    <string name="tiempo_de_cada_terapia">Tiempo de\ncada terapia</string>
    <string name="foto_de_la_oreja_texto">Foto de la oreja:</string>
    <string name="history_option_text">Indicaciones</string>
    <string name="results_option_text">Resultados</string>
    <string name="indication_tratamiento_text">Tratamiento:</string>
    <string name="indicacion_frecuencia_text">Frecuencia diaria:</string>
    <string name="indicacion_tiempo_terapia_text">Tiempo de cada terapia:</string>


    <!--Mensajes de diálogo de validación-->
    <string name="no_puede_finalizar_cita">No puede finalizar la cita hasta su hora de fin</string>
    <string name="confirmacion_cancelar_cita">¿Seguro que desea cancelar la cita?</string>
    <string name="confirmacion_modificar_cita">¿Seguro que desea modificar la cita?</string>
    <string name="confirmacion_envio_tratamiento">¿Está conforme con los datos ingresados?</string>


    <string name="modificar_setting"><u>Modificar</u></string>

</resources>