<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LogInActivity">

    <TextView
        android:id="@+id/tv_userlog"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="208dp"
        android:text="@string/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="60dp"
        android:text="@string/password2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_userlog" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/logo"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/et_nombreUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo_ear"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="125dp"
        android:background="@android:drawable/editbox_background_normal"
        android:backgroundTint="#6D82E6"
        android:text="@string/login"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_contrasena2" />

    <TextView
        android:id="@+id/tv_optionregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/optionregister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_login" />

    <TextView
        android:id="@+id/tv_optionForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="244dp"
        android:text="@string/optionForget"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_optionregister"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_contrasena2"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="55dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_password" />

    <EditText
        android:id="@+id/et_nombreUsuario"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="55dp"
        android:ems="10"
        android:hint="@string/nombre_de_usuario"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_userlog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_userlog" />
</androidx.constraintlayout.widget.ConstraintLayout>