<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:id="@+id/tv_Registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/registroTitulo"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_nombreRegistro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="@string/nombre_de_usuario"
        android:inputType="textPersonName"
        android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ "
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvNombre"
        app:layout_constraintTop_toBottomOf="@+id/tv_Registro" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:text="@string/str_nombre"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_nombreRegistro"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:text="@string/str_apellidoLabel"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_apellido"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvFechaNacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:text="@string/str_fecha_de_nacimiento"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_Fecha"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSeleccionarSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="29dp"
        android:text="@string/str_GenderLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFechaNacimiento" />

    <TextView
        android:id="@+id/tvUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:text="@string/str_usuarioLabel"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_usuario"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvPasswordRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:text="@string/str_passwordLabel"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvKeyWordRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:text="@string/str_keywordLabel"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_keyword"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_apellido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="@string/str_apellidohint"
        android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ "
        android:maxLength="30"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvApellido"
        app:layout_constraintTop_toBottomOf="@+id/et_nombreRegistro" />

    <EditText
        android:id="@+id/et_usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="89dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="@string/nombre_de_usuario"
        android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ123456789"
        android:maxLength="20"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvUsuario"
        app:layout_constraintTop_toBottomOf="@+id/spinner3" />

    <EditText
        android:id="@+id/et_keyword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="@string/str_keywordhint"
        android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ123456789#$ "
        android:maxLength="20"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvKeyWordRegistro"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="@string/password"
        android:maxLength="20"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvPasswordRegistro"
        app:layout_constraintTop_toBottomOf="@+id/et_usuario" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvSeleccionarSexo"
        app:layout_constraintTop_toBottomOf="@+id/et_Fecha" />

    <EditText
        android:id="@+id/et_Fecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="seleccionar fecha"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvFechaNacimiento"
        app:layout_constraintTop_toBottomOf="@+id/et_apellido" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="148dp"
        android:text="@string/registrar_button_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <TextView
        android:id="@+id/tv_resultadoGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toStartOf="@+id/spinner3"
        app:layout_constraintStart_toEndOf="@+id/tvSeleccionarSexo"
        app:layout_constraintTop_toBottomOf="@+id/tvFechaNacimiento" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="Correo:"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="97dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="correo"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_email"
        app:layout_constraintTop_toBottomOf="@+id/et_keyword" />

</androidx.constraintlayout.widget.ConstraintLayout>